[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["Chengzong Li <chengzongli.ee10@nycu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
